feat: enhancement - cart, order in DB, OrderItem as entity